--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/matter-js": "^0.20.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
     "lenis": "^1.3.16",
     "lucide-react": "^0.562.0",
+    "matter-js": "^0.20.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "16.1.0",
     "react": "19.2.3",
